unpackaged/main/default/objects/Invoice__c/fields/Account_Desc__c.field-meta.xml
<CustomField>
    <fullName>Account_Desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Desc</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>