unpackaged/main/default/objects/Invoice__c/fields/Batch_Source__c.field-meta.xml
<CustomField>
    <fullName>Batch_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>