unpackaged/main/default/objects/Invoice__c/fields/Complete_Flag__c.field-meta.xml
<CustomField>
    <fullName>Complete_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Flag</label>
    <type>Checkbox</type>
</CustomField>