unpackaged/main/default/objects/Invoice__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>