unpackaged/main/default/objects/Invoice__c/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CreationDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>