unpackaged/main/default/objects/Invoice__c/fields/Ct_Reference__c.field-meta.xml
<CustomField>
    <fullName>Ct_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ct Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>