unpackaged/main/default/objects/Invoice__c/fields/Customer_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice_No__c</fullName>
    <label>Customer Invoice No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>