unpackaged/main/default/objects/Invoice__c/fields/Dist_Account__c.field-meta.xml
<CustomField>
    <fullName>Dist_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dist Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>