unpackaged/main/default/objects/Invoice__c/fields/Estimation__c.field-meta.xml
<CustomField>
    <fullName>Estimation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>