unpackaged/main/default/objects/Invoice__c/fields/ET_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>ET_Doc_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Id</label>
    <referenceTo>ET_Finance_Document__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>