unpackaged/main/default/objects/Invoice__c/fields/ETST_Activity_Center__c.field-meta.xml
<CustomField>
    <fullName>ETST_Activity_Center__c</fullName>
    <formula>if(ISPICKVAL(Service_Request__r.ETST_Student__r.ETST_School_Name__r.ETST_Account_Type__c, &#39;Government School&#39;), &#39;Government School&#39;, &#39;Private School&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Center</label>
    <type>Text</type>
</CustomField>