unpackaged/main/default/objects/Invoice__c/fields/ETST_Cheque__c.field-meta.xml
<CustomField>
    <fullName>ETST_Cheque__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>