unpackaged/main/default/objects/Invoice__c/fields/ETST_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>ETST_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>