unpackaged/main/default/objects/Invoice__c/fields/ETST_Courier__c.field-meta.xml
<CustomField>
    <fullName>ETST_Courier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Courier #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>