unpackaged/main/default/objects/Invoice__c/fields/ETST_Courier_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_Courier_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Courier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>