unpackaged/main/default/objects/Invoice__c/fields/ETST_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>ETST_Submitted_By__c</fullName>
    <label>Submitted By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>