unpackaged/main/default/objects/Invoice__c/fields/ETST_Type__c.field-meta.xml
<CustomField>
    <fullName>ETST_Type__c</fullName>
    <label>Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>On Premise</fullName>
            </value>
            <value>
                <fullName>Bank Transfer / Cash Deposit</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>