unpackaged/main/default/objects/Invoice__c/fields/FromDate__c.field-meta.xml
<CustomField>
    <fullName>FromDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FromDate</label>
    <type>DateTime</type>
</CustomField>