unpackaged/main/default/objects/Invoice__c/fields/Gl_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Gl_Posted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gl Posted Date</label>
    <type>DateTime</type>
</CustomField>