unpackaged/main/default/objects/Invoice__c/fields/InternalBillNumber__c.field-meta.xml
<CustomField>
    <fullName>InternalBillNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>InternalBillNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>