unpackaged/main/default/objects/Invoice__c/fields/Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>