unpackaged/main/default/objects/Invoice__c/fields/Last_Update_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Update By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>