unpackaged/main/default/objects/Invoice__c/fields/Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Update Date</label>
    <type>DateTime</type>
</CustomField>