unpackaged/main/default/objects/Invoice__c/fields/Oracle_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Customer_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>