unpackaged/main/default/objects/Invoice__c/fields/Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Ref_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>