unpackaged/main/default/objects/Invoice__c/fields/Ref_Trans_Type__c.field-meta.xml
<CustomField>
    <fullName>Ref_Trans_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ref Trans Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>