unpackaged/main/default/objects/Invoice__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>ET_Sales_Agreement__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>