unpackaged/main/default/objects/Invoice__c/fields/ToDate__c.field-meta.xml
<CustomField>
    <fullName>ToDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ToDate</label>
    <type>DateTime</type>
</CustomField>