unpackaged/main/default/objects/Invoice__c/fields/Total_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Amount__c</fullName>
    <label>Total Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>