unpackaged/main/default/objects/Invoice__c/fields/Transaction_Class__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>