unpackaged/main/default/objects/Invoice__c/fields/Trx_Date__c.field-meta.xml
<CustomField>
    <fullName>Trx_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trx Date</label>
    <type>DateTime</type>
</CustomField>