unpackaged/main/default/objects/Invoice__c/fields/Trx_Number__c.field-meta.xml
<CustomField>
    <fullName>Trx_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trx Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>