unpackaged/main/default/objects/Invoice__c/recordTypes/B2B_Invoice.recordType-meta.xml
<RecordType>
    <fullName>B2B_Invoice</fullName>
    <active>true</active>
    <description>for all the Transport and Lease ( Zone Sales /KAM )</description>
    <label>B2B Invoice</label>
</RecordType>