unpackaged/main/default/objects/Invoice__c/recordTypes/ETC_Car_Services.recordType-meta.xml
<RecordType>
    <fullName>ETC_Car_Services</fullName>
    <active>true</active>
    <label>Car Services</label>
</RecordType>