unpackaged/main/default/objects/Invoice__c/recordTypes/ETST_School_Transport.recordType-meta.xml
<RecordType>
    <fullName>ETST_School_Transport</fullName>
    <active>true</active>
    <description>for Emirates transport customers</description>
    <label>School Transport</label>
</RecordType>