unpackaged/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Request__c</columns>
    <columns>CreationDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>